final final push, fix min width for selector on iPhones

--- a/src/components/Results/Results.css
+++ b/src/components/Results/Results.css
@@ -65,7 +65,7 @@
   .results-flight-selector{
     height: 1.4rem;
     padding: 0px 0px 0px 10px;
-    min-width: 160px;
+    min-width: 180px;
   }
 
   .ResultsTable {
